# IFJ22

./: .gitignore  CMakeLists.txt  LLTableParsed.txt  LLgramarForGenerator.txt  LLgrammar.txt  LLtable.c  LLtable.h  LLtable.html  Makefile  README.md  automat.drawio  common.c  common.h  dynstring.c  dynstring.h  expParse.c  expParse.h  gen_3adres.c  gen_3adres.h  gen_gen.c  gen_gen.h  gen_igen.c  gen_igen.h  gen_postproces.c  gen_postproces.h  generator_3adres.c  generator_3adres.h  generator_generator.c  generator_generator.h  generator_igen.c  generator_igen.h  generator_postproces.c  generator_postproces.h  goal.txt  helper.h  lex  lex.c  lex.h  main.c  parse.py  (+16 more)
.github/workflows/: cmake.yml
IFJcode22_examples/: README
generator/: 3adres.c  3adres.h  CMakeLists.txt  generator.c  generator.h  igen.c  igen.h
test/: CMakeLists.txt  dynStrTest.cpp  expParser.cpp  lexTests.cpp  parserTest.cpp  stackTest.cpp  symtableTest.cpp
